--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello World (test4)!</h1>
+<h1>Hello World (from test4)!</h1>
 <p>This is the <code>master</code> branch</p>
 
 <%= content_tag :ul do %>
